fix: correct margin on mobile dataset details page

--- a/src/styles/components-ec-style/_dataset_details.scss
+++ b/src/styles/components-ec-style/_dataset_details.scss
@@ -156,6 +156,10 @@
   .distributions-show-more-button {
     width: 100%;
   }
+
+  .dsd-download-all-distributions-button {
+    margin-bottom: 2rem;
+  }
 }
 
 @media screen and (min-width: 992px) { // at least lg
